--- a/index.html
+++ b/index.html
@@ -11,27 +11,24 @@
 	    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
-		<style>
-			p{
-				font-family: 'Klavika-light', 'sans-serif';
-			}
-
-			h1 {
-
-				font-family: 'Elderkin-Medium', 'sans-serif';
-			}
-		</style>
-
-
 	</head>
 
 	<body>
 
-		<header class="header navbar-fixed-top" >
-			<nav class="navbar-default navbar navbar-fixed-top container">
-				<object width="500" height="500" data="images/logo.svg"> </object>
-
-			</nav>
+		<header class="navbar header navbar-default navbar-fixed-top" >
+			<div class="container">				
+				<div class="nav-header logo-container">
+					 <a href="www.google.com"><img id="logo" width="100" height="80" src="images/logo.svg"> </img>  </a>
+				</div>
+				<div class="navbar navbar-collapse menu-container">
+					 <ul class="navbar-nav nav main-menu">
+						<li> What's code Math </li>
+						<li> Trajectory </li>
+						<li> Framework Example </li>
+						<li> Contact </li>
+					</ul>
+				</div>
+			</div>			
 		</header>
 
 		<div class="container">
