Added latest element to the path structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <title> codeMath </title>
-	    <link rel="icon" type="image/ico" href="images/logoico.ico">
+	    <link rel="icon" href="favicon.ico" type="image/x-icon">
+ 		<link rel="shortcut icon" href="file://localhost/Users/mauriciosanchezduque/Documents/codeMath/favico.ico" type="image/x-icon">
 	    <!--Style Sheet -->
 	    <link href="css/style.css" rel="stylesheet">
 	    <!--Libraries-->
@@ -43,19 +44,30 @@
 		</header>
 
 		<div class="container" id="fullpage" style="height: 100%; position: relative; top: 0px;" >
-			
-			<section class="section" id="what-code-math" data-anchor="firstPage">
+			<!-- First Section -->
+					
+			<section class="section active" id="what-code-math" data-anchor="firstPage">
 				<h2> what codeMath is? </h2>
+				<img width="300px" height="300px" id="what-code-image"> </img>
+				<p id="codeMath-definition">
+						codeMath is a project that seeks to explore new ways of teaching Math through Code. It seeks to find new ways of approaching two topics that throughout time have been prooved to be hard to learn.
+				</p>
 			</section>
 
+			<!-- <section id="trajectory-top">
+			<section> -->
 			<section class="section" id="trajectory" data-anchor="secondPage">
 				<h2> trajectory </h2>
 			</section>
 
+			<!-- <section id="code-examples-top">
+			<section> -->
 			<section class="section" id="code-examples" data-anchor="thirdPage">
 				<h2> frameworkExamples </h2>
 			</section>
 
+			<!-- <section id="contact-top">
+			<section> -->
 			<section class="section" id="contact" data-anchor="fourthPage">
 				<h2> contact </h2>
 			</section>
