--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
 			    <div class="slide"> Slide 2 </div>
 			    <div class="slide"> Slide 3 </div>
 			    <div class="slide"> Slide 4 </div>
+			    <div class="slide"> Slide 5 </div>
+			    <div class="slide"> Slide 6 </div>
+			    <div class="slide"> Slide 7 </div>
+			    <div class="slide"> Slide 8 </div>
+			    <div class="slide"> Slide 9 </div>
+			    <div class="slide"> Slide 10 </div>
+			    <div class="slide"> Slide 11 </div>
+			    <div class="slide"> Slide 12 </div>
+			    
 			    <div class="controlArrow prev"></div>
 			    <div class="controlArrow next"></div>
 				
