Started populating the framework Elements

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 			<section class="section active" id="what-code-math" data-anchor="secondPage">
 
 			</section>
-			<!-- First Section -->					
+			<!-- First Section - WHAT"S CODE MATH? -->					
 			<section class="section " id="what-code-math" data-anchor="firstPage">
-				<article class="what-content container">
+				<article class="article-container container">
 					<h2 class="page-title"> what's codeMath? </h2>
 					<img width="300px" height="300px" id="what-code-image"> </img>
 					<p id="codeMath-definition" class="page-text">
@@ -58,26 +58,42 @@
 					</p>
 				</article>
 			</section>
-			<!-- Second Section -->	
+			<!-- Second Section - TRAJECTORY-->	
 			<section class="section" id="trajectory" data-anchor="secondPage">
-				<article class="what-content container">
+				<article class="article-container container">
 					<h2 class="page-title"> trajectory </h2>
-					<img width="300px" height="300px" id="what-code-image"> </img>
-					<p id="codeMath-definition" class="page-text">
-							<!-- codeMath is a project that seeks to explore new ways of teaching Math through Code. It seeks to find new ways of approaching two topics that throughout time have been proved to be hard when learned. -->
+					<img width="300px" height="300px" id="trajectory-image"> </img>
+					<p id="trajectory-text" class="page-text">
 							This is a long term project with different stages. The most immediate step is to show the potential and establish relationships between Code and Math. This will serve as a precedent to start building curriculum as a new way to teach.
 					</p>
 				</article>	
 			</section>
 
-			<!-- Third Section -->	
+			<!-- Third Section - FRAMEWORK -->	
 			<section class="section" id="code-examples" data-anchor="thirdPage">
 				<div class="slide">
-					<article class="what-content container">
+					<article class="article-container container">
 						<h2 class="page-title"> framework </h2>
+						<p id="framework-text"  class="page-text">
+							The following examples showcase how Code Interacts with Math to show relationships and build upon a goal. 12 exercises that walk the student from Variables to graphing in the Cartisean Plane.
+						</p>
+						<img id="framework-image" src="images/framework_image.svg"> </img>
 					</article>
 				</div>
-			    <div class="slide"> Slide 2 </div>
+			    <div class="slide container"> 
+			    	<article class="article-container container">
+						<h2 class="page-title"> 1. Variables </h2>
+						<img id="framework-image" src="images/framework_image.svg"> </img>
+						<p id="variables-text"  class="page-text">
+							A symbol for a number or an element such a string of text that stores its value.
+						</p>
+						<ul id="variables-code">
+							<li class="generic-code"> x = 5 </li>
+							<li class="generic-code"> something = 20 </li>
+							<li class="generic-code"> something + x = 25 </li>
+						</ul>						
+					</article>
+			    </div>
 			    <div class="slide"> Slide 3 </div>
 			    <div class="slide"> Slide 4 </div>
 			    <div class="slide"> Slide 5 </div>
@@ -104,8 +120,9 @@
 
 		</div>
 		<!--fullpage.js ends here -->
-		
-		<script src="js/main.js"></script>
+		<script type="text/javascript" src="js/variables.js"> </script>
+		<script type="text/javascript" src="js/functions.js"> </script>
+		<script type="text/javascript" src="js/main.js"></script>
 
 
 	</body>
