Started second example

--- a/index.html
+++ b/index.html
@@ -104,7 +104,29 @@
 						</div>
 					</article>
 			    </div>
-			    <div class="slide"> Slide 3 </div>
+			   <!-- 2. VARIABLES AND EQUATIONS -->
+			    <div class="slide">
+			    	<article class="article-container container">
+						<h2 class="page-title"> 2. Variables and equations </h2>	
+						<div id="equations-text">					
+							<p class="page-text" id="equations-definition">
+								Now that we have learned about variables. Let's see the same principle in an equation with two different variables. <br>
+								Each side of the squares has a variable assigned. As we change the sizes of the squares, the values in our variables change, affecting the result.
+							</p>
+							<!-- <ul id="equations-code">
+								<code class="generic-code"> </code><br>
+								
+							</ul> -->
+						</div>
+						<!--Here we insert our square-->
+						<div class="canvas-container">
+							<p id="equations-canvas-text">
+								x + y = ?
+							</p>	
+							<div id="equations-canvas" > </div>
+						</div>
+					</article>		
+			    </div>
 			    <div class="slide"> Slide 4 </div>
 			    <div class="slide"> Slide 5 </div>
 			    <div class="slide"> Slide 6 </div>
