Second excercise iplemented

--- a/index.html
+++ b/index.html
@@ -112,18 +112,16 @@
 							<p class="page-text" id="equations-definition">
 								Now that we have learned about variables. Let's see the same principle in an equation with two different variables. <br>
 								Each side of the squares has a variable assigned. As we change the sizes of the squares, the values in our variables change, affecting the result.
-							</p>
-							<!-- <ul id="equations-code">
-								<code class="generic-code"> </code><br>
-								
-							</ul> -->
+							</p>							
 						</div>
-						<!--Here we insert our square-->
-						<div class="canvas-container">
-							<p id="equations-canvas-text">
-								x + y = ?
-							</p>	
+						<!--Here we insert our two rectangles-->
+						<div class="canvas-container" id="equations-container">								
 							<div id="equations-canvas" > </div>
+							<p id="equations-canvas-text">
+								<li id="equations-rectangle-1"> var x = 50; </li>
+								<li id="equations-rectangle-2"> var y = 30; </li>
+								<li id="equations-result"> </li>
+							</p>
 						</div>
 					</article>		
 			    </div>
