Thirs excercise in place, needs more elements

--- a/index.html
+++ b/index.html
@@ -125,7 +125,26 @@
 						</div>
 					</article>		
 			    </div>
-			    <div class="slide"> Slide 4 </div>
+			    <div class="slide"> 
+		    		<article class="article-container container">
+					<h2 class="page-title"> 3. Cartesian Plane</h2>	
+					<div id="cartesian-text">					
+						<p class="page-text" id="cartesian-definition">
+							Let's put aside our concepts of variables and equations which we will bring later and focus on the Cartesian plane.<br>
+							The Cartesian plane or Coordinate plane is a plane that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can postion elements on the plane.
+						</p>							
+					</div>
+					<!--Here we insert our two rectangles-->
+					<div class="canvas-container" id="cartesian-container">								
+						<div id="cartesian-canvas" > </div>
+					<!-- 	<p id="cartesian-canvas-text">
+							<li id="cartesian-rectangle-1"> var x = 50; </li>
+							<li id="cartesian-rectangle-2"> var y = 30; </li>
+							<li id="cartesian-result"> </li>
+						</p> -->
+					</div>
+				</article>
+			    </div>
 			    <div class="slide"> Slide 5 </div>
 			    <div class="slide"> Slide 6 </div>
 			    <div class="slide"> Slide 7 </div>
