Finished the fourth exercise

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 								A symbol for a number or an element such a string of text that stores its value.
 							</p>
 							<ul id="variables-code">
-								<code class="generic-code"> x = 5 </code><br>
-								<code class="generic-code"> something = 20 </code><br>
-								<code class="generic-code"> something + x = 25 </code>
+								<li><code class="generic-code"> x = 5 </code></li><br>
+								<li><code class="generic-code"> something = 20 </code></li><br>
+								<li><code class="generic-code"> something + x = 25 </code></li>
 							</ul>
 						</div>
 						<!--Here we insert our square-->
@@ -117,35 +117,55 @@
 						<!--Here we insert our two rectangles-->
 						<div class="canvas-container" id="equations-container">								
 							<div id="equations-canvas" > </div>
-							<p id="equations-canvas-text">
-								<li id="equations-rectangle-1"> var x = 50; </li>
-								<li id="equations-rectangle-2"> var y = 30; </li>
+							<ul id="equations-canvas-text">
+								<li id="equations-rectangle-1">  x = 50; </li>
+								<li id="equations-rectangle-2">  y = 30; </li>
 								<li id="equations-result"> </li>
-							</p>
+							</ul>
 						</div>
 					</article>		
 			    </div>
 			    <div class="slide"> 
 		    		<article class="article-container container">
-					<h2 class="page-title"> 3. Cartesian Plane</h2>	
-					<div id="cartesian-text">					
-						<p class="page-text" id="cartesian-definition">
-							Let's put aside our concepts of variables and equations which we will bring later and focus on the Cartesian plane.<br>
-							The Cartesian plane or Coordinate plane is a plane that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can postion elements on the plane.
-						</p>							
-					</div>
-					<!--Here we insert our two rectangles-->
-					<div class="canvas-container" id="cartesian-container">								
-						<div id="cartesian-canvas" > </div>
-					<!-- 	<p id="cartesian-canvas-text">
-							<li id="cartesian-rectangle-1"> var x = 50; </li>
-							<li id="cartesian-rectangle-2"> var y = 30; </li>
-							<li id="cartesian-result"> </li>
-						</p> -->
-					</div>
-				</article>
+						<h2 class="page-title"> 3. Cartesian Plane</h2>	
+						<div id="cartesian-text">					
+							<p class="page-text" id="cartesian-definition">
+								Let's put aside our concepts of variables and equations which we will bring later and focus on the Cartesian plane.<br>
+								The Cartesian plane or Coordinate plane is a plane that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can postion elements on the plane.
+							</p>							
+						</div>
+						<!--Here we insert our two rectangles-->
+						<div class="canvas-container" id="cartesian-container">								
+							<div id="cartesian-canvas" > </div>
+							<p id="cartesian-canvas-text">
+								<li id="cartesian-rectangle-1"> var x = 50; </li>
+								<li id="cartesian-rectangle-2"> var y = 30; </li>
+								<li id="cartesian-result"> </li>
+							</p>
+						</div>
+					</article>
 			    </div>
-			    <div class="slide"> Slide 5 </div>
+			    <div class="slide"> 
+			    	<article class="article-container container">
+						<h2 class="page-title"> 4. Cartesian Plane II</h2>	
+						<div id="cartesian2-text">					
+							<ul class="page-text" id="cartesian2-definition">
+								Now that we are familiar with the elements of the cartesian plane let's see how we place an element in the plane.<br>
+								Click on the different markers to move the circle and how the position of the circle updates.
+							</ul>							
+						</div>
+						
+						<div class="canvas-container" id="cartesian2-container">	
+							<!--Here we insert our cartesian plane-->	
+							<div id="cartesian2-canvas" > </div>
+							<ul id="cartesian-canvas-text">
+								<li id="cartesian2-posx"> position x = 0; </li>
+								<li id="cartesian2-posy"> position y = 0; </li>
+								<!-- <li id="cartesian2-result"> </li> -->
+							</ul>
+						</div>							
+					</article>
+			    </div>
 			    <div class="slide"> Slide 6 </div>
 			    <div class="slide"> Slide 7 </div>
 			    <div class="slide"> Slide 8 </div>
