Finished fifth exercise

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 						</div>
 					</article>		
 			    </div>
+			    <!-- 3. CARTESIAN PLANE -->
 			    <div class="slide"> 
 		    		<article class="article-container container">
 						<h2 class="page-title"> 3. Cartesian Plane</h2>	
@@ -145,6 +146,7 @@
 						</div>
 					</article>
 			    </div>
+			    <!-- 4. CARTESIAN PLANE II -->
 			    <div class="slide"> 
 			    	<article class="article-container container">
 						<h2 class="page-title"> 4. Cartesian Plane II</h2>	
@@ -166,7 +168,27 @@
 						</div>							
 					</article>
 			    </div>
-			    <div class="slide"> Slide 6 </div>
+			     <!-- . CARTESIAN PLANE IN THE COMPUTER -->
+			    <div class="slide">
+			    	<article class="article-container container">
+						<h2 class="page-title"> 5. Cartesian Plane on the computer</h2>	
+						<div id="comp-text">					
+							<ul class="page-text" id="comp-definition">
+								Once we have understood the behavior of the Cartesian Plane, it is important to distinguish it from the one in the computer <br>
+								In most frameworks, the Y axis is positive going down, and we usually only use one quadrant. Each coordinate is limited by a given pixels
+							</ul>							
+						</div>						
+						<div class="canvas-container" id="comp-container">	
+							<!--Here we insert our cartesian plane-->	
+							<div id="comp-canvas" > </div>
+							<ul id="comp-canvas-text">
+								<li id="comp-posx"> position x = 0; </li>
+								<li id="comp-posy"> position y = 0; </li>
+								<!-- <li id="cartesian2-result"> </li> -->
+							</ul>
+						</div>							
+					</article>
+			    </div>
 			    <div class="slide"> Slide 7 </div>
 			    <div class="slide"> Slide 8 </div>
 			    <div class="slide"> Slide 9 </div>
