--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						</div>							
 					</article>
 			    </div>
-			     <!-- . CARTESIAN PLANE IN THE COMPUTER -->
+			     <!-- 5. CARTESIAN PLANE IN THE COMPUTER -->
 			    <div class="slide">
 			    	<article class="article-container container">
 						<h2 class="page-title"> 5. Cartesian Plane on the computer</h2>	
@@ -189,7 +189,25 @@
 						</div>							
 					</article>
 			    </div>
-			    <div class="slide"> Slide 7 </div>
+			    <!-- 6. THE CIRCLE ON THE CARTESIAN PLANE -->
+			    <div class="slide">
+			    	<article class="article-container container">
+						<h2 class="page-title"> 5. Cartesian Plane on the computer</h2>	
+						<div id="circle-text">					
+							<ul class="page-text" id="circle-definition">
+								Once we have understood the behavior of the Cartesian Plane, it is important to distinguish it from the one in the computer <br>
+								In most frameworks, the Y axis is positive going down, and we usually only use one quadrant. Each coordinate is limited by a given pixels
+							</ul>							
+						</div>						
+						<div class="canvas-container" id="circle-container">	
+							<!--Here we insert our cartesian plane-->	
+							<div id="circle-canvas" > </div>
+							<ul id="circle-canvas-text">
+								<li id="circle-radius"> radius = 0; </li>
+							</ul>
+						</div>							
+					</article>
+			    </div>
 			    <div class="slide"> Slide 8 </div>
 			    <div class="slide"> Slide 9 </div>
 			    <div class="slide"> Slide 10 </div>
