--- a/index.html
+++ b/index.html
@@ -192,18 +192,19 @@
 			    <!-- 6. THE CIRCLE ON THE CARTESIAN PLANE -->
 			    <div class="slide">
 			    	<article class="article-container container">
-						<h2 class="page-title"> 5. Cartesian Plane on the computer</h2>	
+						<h2 class="page-title"> 6. Drawing Elements on the Screen</h2>	
 						<div id="circle-text">					
 							<ul class="page-text" id="circle-definition">
-								Once we have understood the behavior of the Cartesian Plane, it is important to distinguish it from the one in the computer <br>
-								In most frameworks, the Y axis is positive going down, and we usually only use one quadrant. Each coordinate is limited by a given pixels
+								Different elements can be drawn on the Cartesian Plane on the screen. <br>
+								When drawing a Circle, besides a given X and Y position, we have to determine a radius. Given a variable called radius we give it a value to determine its size.
 							</ul>							
 						</div>						
 						<div class="canvas-container" id="circle-container">	
 							<!--Here we insert our cartesian plane-->	
 							<div id="circle-canvas" > </div>
 							<ul id="circle-canvas-text">
-								<li id="circle-radius"> radius = 0; </li>
+								<li id="circle-radius"> var radius = 20; </li>
+								<li id="circle-radius"> circle(100,100, radius); </li>
 							</ul>
 						</div>							
 					</article>
