Changed the arrows for the horizontal navigation

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 						<h2 class="page-title"> 9. Circle and Color</h2>	
 						<div id="circle-color-text">					
 							<ul class="page-text" id="circle-color-definition">
-								Now that we know the bahavior of the Circle given X and Y coordinates, let's keep customizing by giving the circle a color.<br>
+								Now that we know the behavior of the Circle given X and Y coordinates, let's keep customizing by giving the circle a color.<br>
 								Like was explained in the first lessons, variables allow us to store any information, in this case a string of color.
 							</ul>							
 						</div>						
@@ -275,15 +275,14 @@
 						</div>
 					</article>
 			    </div>
-			    <div class="slide"> Slide 11 </div>
-			    <!-- 12. DRAWING MULTIPLE ELEMENTS -->
+			   <!--  <div class="slide"> Slide 11 </div> -->
+			    <!-- 10. DRAWING MULTIPLE ELEMENTS -->
 			    <div class="slide"> 
 			    	<article class="article-container container">
-						<h2 class="page-title"> 12. Drawing multiple elements</h2>	
+						<h2 class="page-title"> 10. Drawing multiple elements</h2>	
 						<div id="multiple-text">					
 							<ul class="page-text" id="multiple-definition">
-								To Be Introduced<br>
-								
+								After learning of different types of variables and how to draw elements in the Cartesian Plane, we can start using this concepts to create compositions.<br>								
 							</ul>							
 						</div>						
 						<div class="canvas-container" id="multiple-container">	
@@ -300,8 +299,12 @@
 					</article>
 			    </div>
 			    <!-- These are the arrows for horizontal navigation -->
-			    <div class="controlArrow prev"></div>
-			    <div class="controlArrow next"></div>
+			    <div class="controlArrow prev" >
+			    	<img id="arrow-previous" width="60" height="60" src="images/navigation_arrow_backwards.svg"> </img>
+			    </div>
+			    <div class="controlArrow next" >
+			    	<img id="arrow-forward" width="60" height="60" src="images/navigation_arrow_forward.svg"> </img>
+			    </div>
 				
 			</section>
 
