All assest finished with layout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<h2 class="page-title"> </h2>
 					<img width="182px" height="150px" id="what-code-image" src="images/logo4_dropshadow.png"> </img>
 					<p id="codeMath-definition" class="page-text">
-						codeMath is an initiative that seeks to explore new ways of teaching Math through Code. It seeks to find new approaches to two topics that throughout time have been proved to be hard when learned.
+						codeMath is an initiative that seeks to explore new ways of teaching Math through Code. It seeks to find new approaches to two topics that are non-intuitive.
 					</p>
 				</article>
 			</section>
@@ -76,7 +76,7 @@
 					<article class="article-container container">
 						<h2 class="page-title"> framework </h2>
 						<p id="framework-text"  class="page-text">
-							The following examples showcase how Code Interacts with Math to illustrate relationships and build upon a goal. 12 mine lessons that walk the student from Variables to graphing in the Cartisean Plane. Giving the opportunity to build knowledge from lessons to lessons.
+							The following examples showcase how Code Interacts with Math to illustrate relationships and build upon a goal. 12 mini lessons that walk the student from Variables to graphing in the Cartisean Plane. Giving the opportunity to build knowledge from lessons to lessons.
 						</p>
 						<img id="framework-image" src="images/framework_image.svg"> </img>
 					</article>
@@ -87,10 +87,10 @@
 						<h2 class="page-title"> 1. Variables </h2>	
 						<div id="variables-text">					
 							<p class="page-text" id="variables-definition">
-								A symbol for a number or an element such a string of text that stores its value. <br>	
+								A symbol for a number or an element such a string of text that stores its value. Mostly descriptive about the value that it contains <br>	
 								 x = 5 <br>									something = 20 <br> 
 								 something + x = 25 <br>
-								 Let's store the the value of one side of the square ina variable X and see what happens when it gets resized. 
+								 Let's store the the value of one side of the square in a variable named "x" and see what happens when it gets resized. 
 							</p>						
 						</div>
 						<!--Here we insert our square-->
@@ -326,6 +326,18 @@
 						</div>							
 					</article>
 			    </div>
+			    <div class="slide"> 
+			    	<article class="article-container container">
+						<h2 class="page-title"> 11. The End </h2>	
+						<div id="conclusion-text">					
+							<p class="page-text" id="conclusion-definition">
+								At this point you must have a basic knowledge of the cartesian plane, variables and simple equations.<br> <br>
+								Stay tuned for more lessons!				
+							</p>							
+						</div>													
+					</article>
+			    </div>
+
 			    <!-- These are the arrows for horizontal navigation -->
 			    <div class="controlArrow prev" >
 			    	<img id="arrow-previous" width="60" height="60" src="images/navigation_arrow_backwards.svg"> </img>
