Added navigation dots with unique classes to start manipulating the css

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div id="cartesian-text">					
 							<p class="page-text" id="cartesian-definition">
 								Let's put aside our concepts of variables and equations which we will bring later and focus on the Cartesian plane.<br>
-								The Cartesian plane or Coordinate plane is a canvas that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can postion elements on the canvas.
+								The Cartesian plane or Coordinate plane is a canvas that has two axes, one vertical and one horizontal, X and Y respectively. Through the use of Cartesian coordinates we can position elements on the canvas.
 							</p>							
 						</div>
 						<!--Here we insert our two rectangles-->
@@ -344,6 +344,9 @@
 			    </div>
 			    <div class="controlArrow next" >
 			    	<img id="arrow-forward" width="60" height="60" src="images/navigation_arrow_forward.svg"> </img>
+			    </div>
+			    <div class="fullPage-slideNav bottom">
+			   
 			    </div>
 				
 			</section>
