Fixed the bar orientation

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 	    <title> codeMath </title>
 	    <link rel="icon" href="favicon.ico" type="image/x-icon">
  		<link rel="shortcut icon" href="file://localhost/Users/mauriciosanchezduque/Documents/codeMath/favico.ico" type="image/x-icon">
-	    <!--Style Sheet -->
-	    <link href="css/style.css" rel="stylesheet">
+	    <!-- Style Sheet -->	    
 	    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
-	    <!--Libraries-->
+	    <link href="css/style.css" rel="stylesheet">
+	    <!-- Libraries -->
+	    <!-- jQuery -->
 	    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	    <!-- jQuery UI CSS-->
 	    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+	    <!-- jQuery UI -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+		<!-- fullPage.js -->
 		<script type="text/javascript" src="js/jquery.fullPage.js"></script>
+		<!-- Raphael.js -->
 		<script language="JavaScript" type="text/javascript" src="js/raphael-min.js"></script>
 
 
@@ -345,6 +350,7 @@
 			    <div class="controlArrow next" >
 			    	<img id="arrow-forward" width="60" height="60" src="images/navigation_arrow_forward.svg"> </img>
 			    </div>
+			    <!-- This adds navigation dots to the screen-->
 			    <div class="fullPage-slideNav bottom">
 			   
 			    </div>
